force-app/main/default/objects/Task_Checklist_Item__c/Task_Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>replaces Klient Checklists</description>
    <label>Task Checklist Item</label>
    <nameField>
        <displayFormat>TCL-{000000}</displayFormat>
        <label>Task Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>