force-app/main/default/objects/Task_Checklist_Item__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Task Checklist Items</relationshipLabel>
    <relationshipName>Task_Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>