force-app/main/default/objects/Task_Checklist_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completed_On__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Is_Completed__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Order__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Task__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>